# UCE

./: evaluate.py  pyproject.toml
data_proc/: create_new_species_files_fixed.ipynb  data_utils.py  gene_embeddings.py
model_files/: new_species_protein_embeddings.csv
